# lafauxbolex

./: FauxBolex_Beta_0.93.py  README.md
bolex_core_cpp/: CMakeLists.txt
bolex_core_cpp/src/: core_module.cpp
samples/: frame_000112.dng  frame_000170.dng  frame_000185.dng  frame_000190.dng  frame_001045.dng
